settings: VoltaでNode.jsとnpmのバージョン指定(#3)

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "@astrojs/mdx": "^0.18.3",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2"
+  },
+  "volta": {
+    "node": "18.15.0",
+    "npm": "8.6.0"
   }
 }
