settings: ESLint、Prettier設定(#3)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint-check": "npm run lint:eslint && npm run check:prettier",
+    "lint:eslint": "eslint \"./src/**/*.{js,jsx,ts,tsx,astro}\"",
+    "check:prettier": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,html,json,astro}\"",
+    "fix": "npm run fix:eslint && npm run fix:prettier",
+    "fix:eslint": "npm run lint:eslint -- --fix",
+    "fix:prettier": "npm run check:prettier -- --write"
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.3",
@@ -20,8 +26,16 @@
     "npm": "8.6.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "@unocss/astro": "^0.50.8",
     "@unocss/autocomplete": "^0.50.8",
+    "@unocss/eslint-config": "^0.50.8",
+    "eslint": "^8.38.0",
+    "eslint-plugin-astro": "^0.26.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "prettier": "^2.8.7",
+    "prettier-plugin-astro": "^0.8.0",
     "unocss": "^0.50.8"
   }
 }
