settings: Git Hook設定(#3)

--- a/package.json
+++ b/package.json
@@ -13,17 +13,14 @@
     "check:prettier": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,html,json,astro}\"",
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "npm run lint:eslint -- --fix",
-    "fix:prettier": "npm run check:prettier -- --write"
+    "fix:prettier": "npm run check:prettier -- --write",
+    "prepare": "simple-git-hooks || echo 'Can not set git hooks'"
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.3",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
     "astro": "^2.2.1"
-  },
-  "volta": {
-    "node": "18.15.0",
-    "npm": "8.6.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -34,8 +31,27 @@
     "eslint": "^8.38.0",
     "eslint-plugin-astro": "^0.26.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
     "prettier-plugin-astro": "^0.8.0",
+    "simple-git-hooks": "^2.8.1",
     "unocss": "^0.50.8"
+  },
+  "volta": {
+    "node": "18.15.0",
+    "npm": "8.6.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "prepare-commit-msg": "./git-hook/prepare-commit-msg \"$@\""
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,astro}": [
+      "prettier --write --loglevel=error",
+      "eslint --fix --quiet"
+    ],
+    "./**/*.{html,json}": [
+      "prettier --write --loglevel=error"
+    ]
   }
 }
