settings: 推奨VSCode拡張にUnoCSSが抜けていたので追加(#5)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,8 @@
     "naumovs.color-highlight",
     "astro-build.astro-vscode",
     "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "antfu.unocss"
   ],
   "unwantedRecommendations": []
 }
