--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@astrojs/mdx": "^0.18.3",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
-    "astro": "^2.2.1"
+    "astro": "^2.2.1",
+    "markdown-it": "^13.0.1",
+    "sanitize-html": "^2.10.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
+    "@types/sanitize-html": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@unocss/astro": "^0.50.8",
