--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/mdx": "^0.18.3",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
+    "@unocss/reset": "^0.51.4",
     "astro": "^2.2.1",
     "markdown-it": "^13.0.1",
     "sanitize-html": "^2.10.0"
