--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@astrojs/mdx": "^0.18.3",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
+    "@iconify-json/logos": "^1.1.25",
+    "@iconify-json/system-uicons": "^1.1.8",
     "@unocss/reset": "^0.51.4",
     "astro": "^2.2.1",
     "markdown-it": "^13.0.1",
