--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "astro": "^2.2.1",
     "markdown-it": "^13.0.1",
     "sanitize-html": "^2.10.0",
+    "sass": "^1.62.1",
     "wicg-inert": "^3.1.2"
   },
   "devDependencies": {
