--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/sitemap": "^1.2.2",
     "@iconify-json/logos": "^1.1.25",
     "@iconify-json/system-uicons": "^1.1.8",
+    "@iconify-json/teenyicons": "^1.1.5",
     "@unocss/reset": "^0.51.4",
     "astro": "^2.2.1",
     "markdown-it": "^13.0.1",
