settings: StyleLintの基本ルール導入(#26)
ref: https://zenn.dev/k_neko3/articles/1189846d6340ef

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "naumovs.color-highlight",
     "astro-build.astro-vscode",
     "dbaeumer.vscode-eslint",
+    "stylelint.vscode-stylelint",
     "esbenp.prettier-vscode",
     "antfu.unocss"
   ],
