--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,9 @@
 {
   "extends": [
     "stylelint-config-standard-scss",
+    "stylelint-config-recess-order",
     "stylelint-config-prettier-scss"
   ],
+  "plugins": ["stylelint-order"],
   "ignoreFiles": ["**/node_modules/**"]
 }
