--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "simple-git-hooks": "^2.8.1",
     "stylelint": "^15.6.1",
     "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-order": "^6.0.3",
     "unocss": "^0.50.8"
   },
   "volta": {
