--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@unocss/reset": "^0.51.4",
     "astro": "^2.2.1",
     "markdown-it": "^13.0.1",
+    "remark-breaks": "^3.0.3",
     "sanitize-html": "^2.10.0",
     "sass": "^1.62.1",
     "wicg-inert": "^3.1.2"
