--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@iconify-json/teenyicons": "^1.1.5",
     "@unocss/reset": "^0.51.4",
     "astro": "^2.2.1",
+    "cheerio": "^1.0.0-rc.12",
     "markdown-it": "^13.0.1",
     "rehype-autolink-headings": "^6.1.1",
     "remark-breaks": "^3.0.3",
