--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "astro-build.astro-vscode",
     "dbaeumer.vscode-eslint",
     "stylelint.vscode-stylelint",
+    "taichi.vscode-textlint",
     "esbenp.prettier-vscode",
     "antfu.unocss"
   ],
