--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint-check": "npm run lint:eslint && npm run lint:stylelint && npm run check:prettier",
     "lint:eslint": "eslint \"./src/**/*.{js,jsx,ts,tsx,astro}\"",
     "lint:stylelint": "stylelint \"./src/**/*.scss\"",
+    "lint:textlint:full": "textlint --cache \"src/content/**/*.{md,mdx}\" -f pretty-error",
     "check:prettier": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,html,json,astro}\"",
     "fix": "npm run fix:eslint && npm run fix:stylelint && npm run fix:prettier",
     "fix:eslint": "npm run lint:eslint -- --fix",
-    "fix:prettier": "npm run check:prettier -- --write",
     "fix:stylelint": "npm run lint:stylelint --fix",
+    "fix:textlint:full": "textlint --cache \"src/content/**/*.{md,mdx}\" --fix",
+    "fix:prettier": "npm run check:prettier -- --write",
     "prepare": "simple-git-hooks || echo 'Can not set git hooks'"
   },
   "dependencies": {
@@ -56,6 +58,9 @@
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-order": "^6.0.3",
+    "textlint": "^13.3.2",
+    "textlint-filter-rule-comments": "^1.2.2",
+    "textlint-rule-preset-ja-technical-writing": "^7.0.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
     "unocss": "^0.50.8"
