--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "markdown-it": "^13.0.1",
     "rehype-autolink-headings": "^6.1.1",
     "remark-breaks": "^3.0.3",
+    "remark-flexible-code-titles": "^1.1.3",
     "sanitize-html": "^2.10.0",
     "sass": "^1.62.1",
     "wicg-inert": "^3.1.2"
