settings: 文末の絵文字を許可するようにした(#55)

--- a/.textlintrc
+++ b/.textlintrc
@@ -15,7 +15,8 @@
       "ja-no-mixed-period": {
         "allowPeriodMarks": [
           "."
-        ]
+        ],
+        "allowEmojiAtEnd": true
       }
     }
   }
