settings: Textlintのルールで「ほどほど」は許可するようにした(#55)

--- a/.textlintrc
+++ b/.textlintrc
@@ -17,6 +17,11 @@
           "."
         ],
         "allowEmojiAtEnd": true
+      },
+      "ja-no-successive-word": {
+        "allow": [
+          "/ほど/i"
+        ]
       }
     }
   }
