--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.3",
+    "@astrojs/partytown": "^1.2.3",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
     "@iconify-json/logos": "^1.1.25",
