--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "change-of-pace",
   "type": "module",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
