--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -5,21 +5,22 @@ on:
 jobs:
   check:
     name: Lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 5
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18.15.0
+          node-version-file: '.node-version'
           cache: npm
+          cache-dependency-path: './package-lock.json'
 
-      - name: Package Install
-        run: npm install
+      - name: Package Clean Install
+        run: npm ci
 
       - name: Lint & Format Check
         run: npm run lint-check
