--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,13 @@
     {
       "files": ["*.ts"],
       "parser": "@typescript-eslint/parser"
+    },
+    {
+      "files": ["*.mjs"],
+      "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+      }
     }
   ]
 }
