update: Textlintのアプデ + no-mix-dearu-desumasu調整(#148)
- Textlint: 13.4.0 -> 14.0.1
- textlint-rule-preset-ja-technical-writing: 8.0.0 -> 10.0.1

--- a/.textlintrc
+++ b/.textlintrc
@@ -11,7 +11,6 @@
   },
   "rules": {
     "preset-ja-technical-writing": {
-      "no-exclamation-question-mark": false,
       "ja-no-mixed-period": {
         "allowPeriodMarks": [
           "."
@@ -23,6 +22,13 @@
           "/ほど/i",
           "/では/i"
         ]
+      },
+      "no-exclamation-question-mark": false,
+      "no-mix-dearu-desumasu": {
+        "preferInHeader": "",
+        "preferInBody": "ですます",
+        "preferInList": "",
+        "strict": false
       }
     }
   }
