--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PUBLIC_GOOGLE_ANALYTICS_TAG=
+GOOGLE_ANALYTICS_TAG=
 GOOGLE_SITE_VERIFICATION=
 PUBLIC_GOOGLE_ADSENSE_PUBLISHER_ID=
 PUBLIC_GOOGLE_ADSENSE_SLOT=
