--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@iconify-json/logos": "^1.1.42",
+    "@iconify-json/ri": "^1.1.22",
     "@iconify-json/system-uicons": "^1.1.12",
     "@iconify-json/teenyicons": "^1.1.9",
     "@unocss/reset": "^0.58.6",
