settings: tsconfig.jsonの設定調整 exclude, strict(#183)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "extends": "astro/tsconfigs/base",
+  "exclude": ["dist"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     },
+    "strict": true,
     "strictNullChecks": true
   }
 }
