--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@iconify-json/teenyicons": "^1.2.0",
     "@unocss/reset": "^0.62.3",
     "astro": "^4.15.4",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "markdown-it": "^14.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "remark-breaks": "^4.0.0",
