--- a/package.json
+++ b/package.json
@@ -47,14 +47,13 @@
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
     "@types/sanitize-html": "^2.13.0",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@typescript-eslint/parser": "^8.4.0",
     "@unocss/astro": "^0.62.3",
     "@unocss/autocomplete": "^0.62.3",
     "@unocss/eslint-config": "^0.62.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.32.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint": "^9.10.0",
+    "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "nano-staged": "^0.8.0",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
@@ -68,6 +67,7 @@
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-preset-ja-technical-writing": "^10.0.1",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
     "unocss": "^0.62.3"
   },
   "volta": {
