settings: TextlintのVSCode拡張が新しくなっていたので差し替え(#217)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,7 @@
     "astro-build.astro-vscode",
     "dbaeumer.vscode-eslint",
     "stylelint.vscode-stylelint",
-    "taichi.vscode-textlint",
+    "3w36zj6.textlint",
     "esbenp.prettier-vscode",
     "antfu.unocss"
   ],
