--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,6 +1,8 @@
 name: Develop Check
 on:
   push:
+  pull_request:
+    types: [opened, reopened]
 
 jobs:
   check:
@@ -56,34 +58,23 @@ jobs:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
           payload: |
-          {
-            "text": ":x: *{{ STATUS_TEXT }}*",
-            "blocks": [
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": ":x: *{{ STATUS_TEXT }}*"
-                }
-              },
-              {
-                "type": "section",
-                "fields": [
-                  { "type": "mrkdwn", "text": "*リポジトリ:*\n${{ github.repository }}" },
-                  { "type": "mrkdwn", "text": "*JOB のステータス:*\n${{ job.status }}" }
-                ]
-              },
-              {
-                "type": "context",
-                "elements": [
-                  {
-                    "type": "mrkdwn",
-                    "text": "<${{ env.ACTIONS_URL }}|JOB>のログを確認してください"
-                  }
-                ]
-              }
-            ]
-          }
+            text: ":x: *{{ STATUS_TEXT }}*",
+            blocks:
+              - type: section
+                text:
+                  type: mrkdwn
+                  text: ":x: *${{ env.STATUS_TEXT }}*"
+              - type: section
+                fields:
+                  - type: mrkdwn
+                    text: "*リポジトリ:*\n${{ github.repository }}"
+                  - type: mrkdwn
+                    text: "*JOB のステータス:*\n${{ job.status }}"
+              - type: context
+                elements:
+                  - type: mrkdwn
+                    text: "<${{ env.ACTIONS_URL }}|JOB>のログを確認してください"
+
         env:
           STATUS_TEXT: ${{ job.status == 'success' && '成功' || '失敗' }}
           ACTIONS_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
