update: StyleLint系のアプデ(#247)
- stylelint: 16.26.0 -> 17.1.1
- stylelint-config-recess-order: 7.4.0 -> 7.6.1
- stylelint-config-standard-scss: 16.0.0 -> 17.0.0
- stylelint-order: 7.0.0 -> 7.0.1

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "check:prettier": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,astro,html,json,yml}\"",
     "fix": "npm run fix:eslint && npm run fix:stylelint && npm run fix:prettier",
     "fix:eslint": "npm run lint:eslint -- --fix",
-    "fix:stylelint": "npm run lint:stylelint --fix",
+    "fix:stylelint": "npm run lint:stylelint -- --fix",
     "fix:textlint:full": "textlint --cache \"src/content/**/*.{md,mdx}\" --fix",
     "fix:prettier": "npm run check:prettier -- --write",
     "prepare": "lefthook install || echo 'Can not set git hooks'"
@@ -57,11 +57,11 @@
     "lefthook": "^2.0.4",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
-    "stylelint": "^16.26.0",
+    "stylelint": "^17.1.1",
     "stylelint-config-prettier-scss": "^1.0.0",
-    "stylelint-config-recess-order": "^7.4.0",
-    "stylelint-config-standard-scss": "^16.0.0",
-    "stylelint-order": "^7.0.0",
+    "stylelint-config-recess-order": "^7.6.1",
+    "stylelint-config-standard-scss": "^17.0.0",
+    "stylelint-order": "^7.0.1",
     "textlint": "^15.4.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-preset-ja-technical-writing": "^12.0.2",
